# pkr

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  main.py  pyproject.toml
.github/workflows/: lint-on-pr.yaml  test-on-pr.yaml
src/: .env.example  conftest.py  manage.py
src/authn/: admin.py  decorators.py  decorators_tests.py  models.py  models_tests.py  urls.py  views.py  views_tests.py
src/authn/migrations/: 0001_initial.py
src/authn/templates/authn/: login.html
src/config/: context_processors.py  settings.py  urls.py  wsgi.py
src/core/: constants.py  constants_tests.py  main.py  range.py  range_tests.py  session.py
src/core/range_files/: 6max_100bb.csv  6max_100bb_rfi.csv  6max_100bb_rfi.meta.json
src/devtools/: apps.py
src/frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
src/frontend/src/ranges/: types.ts  utils.ts
src/frontend/src/ranges/components/: PokerTable.css  PokerTable.jsx  PokerTable.tsx
src/frontend/src/ranges/range-grid/: App.jsx  App.tsx  Grid.css  Grid.jsx  Grid.test.tsx  Grid.tsx  GridRow.css  GridRow.test.tsx  GridRow.tsx  Legend.jsx  Legend.test.tsx  Legend.tsx  main.jsx  main.tsx
src/frontend/src/ranges/range-quiz/: AccuracyList.tsx  Answer.css  Answer.jsx  Answer.tsx  App.jsx  App.tsx  Question.jsx  Question.tsx  Quiz.jsx  Quiz.tsx  QuizCards.css  QuizCards.jsx  QuizCards.tsx  QuizControls.jsx  QuizControls.tsx  QuizStats.jsx  QuizStats.tsx  Suit.jsx  Suit.tsx  main.tsx  types.ts  utils.ts
src/marketing/: views.py
src/marketing/templates/marketing/: home.html
src/marketing/templates/marketing/home/: _app-menu.html  _faq.html  _features-1.html  _features-2.html  _features-3.html  _features-4.html  _feedback.html  _footer.html  _header.html  _hero.html  _navbar.html  _newsletter.html  _stats.html  _trusted-by.html
src/ranges/: admin.py  apps.py  models.py  models_tests.py  urls.py  views.py  views_tests.py
src/ranges/management/commands/: load_default_ranges.py
src/ranges/migrations/: 0001_create_preflop_range_model.py  0002_add_description.py
src/ranges/static/ranges/css/: ranges.css
src/ranges/static/ranges/js/: vite-react-refresh.js
src/ranges/templates/ranges/: _base.html  _footer.html  _header.html  _main.html  _navbar.html  range_detail.html  range_list.html  range_quiz.html  ranges.html
src/ranges/templates/ranges/partials/: react_component.html
tests/: docker-lint.sh  docker-smoke.sh  docker-test.sh
