[project]
name = "pkr"
version = "0.1.0"
description = "Poker training software."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-allauth[socialaccount]>=65.12.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["*_tests.py"]

[tool.ruff]
select = ["ALL"]
ignore = []
